--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.2",
+    "@mui/material": "^5.13.3",
     "@supabase/supabase-js": "^2.22.0",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
